--- a/config.json
+++ b/config.json
@@ -45,6 +45,14 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 1
+      },
+      {
+        "slug": "two-fer",
+        "name": "Two-Fer",
+        "uuid": "050a2565-9882-4f9c-9d08-002b800fd974",
+        "practices": [],
+        "prerequisites": [],
+        "difficulty": 1
       }
     ]
   }
